// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template APIs should expose the correct methods 1`] = `
Object {
  "getCompiledTemplate": [Function],
  "getInfo": [Function],
  "render": [Function],
}
`;

exports[`template-compiler APIs should expose the correct methods 1`] = `
Object {
  "compile": [Function],
  "getCompiledTemplate": [Function],
  "getInfo": [Function],
  "render": [Function],
}
`;
